# robo-racer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  code.txt  platformio.ini  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pull_request_size_checker.yml
auto/: auto.h  main.cpp
cad/kicad/: car.kicad_pro  car.kicad_sch
docs/: state_management.md
docs/architecture/: overview.md  test_design.md
docs/contracts/: bag_ops_v0.1.md  ipc_uds_v0.1.md  mc_bridge_v0.1.md  min_spec_v0_1.md  ros_topics_v0.1.md
docs/firmware/: hils_guide.md  hils_plan.md  log_guide.md  log_plan.md  plan.md  speed_command_v2.md
docs/interfaces/: ipc_payloads_v1.md  ipc_topics_v1.md  protocol_rpi_esp32_v1.md  telemetry_transport_v2_100hz.md
docs/ml/: dataset_schema_v1.md  policy_plugin_v1.md
docs/observability/: logging_v1.md
docs/ops/: monitoring_thresholds_v1.md  systemd_v1.md
docs/planning/: a_min_spec_implementation_status.md  a_min_spec_plan.md  abs_backward_investigation.md  abs_backward_investigation_status.md  abs_simplification_plan.md  bc_taskflow_implementation_status.md  bc_taskflow_plan.md  brake_dual_objective_plan.md  config_include_guard_status.md  critical_fixes_review.md  decel_controller_status.md  dir_utils_status.md  docs_planning_cleanup_status.md  drive_gap_status.md  drive_ttl_timebase_fix_status.md  engine_slew_rate_fix_status.md  ftg_accel_margin_status.md  ftg_gap_steer_refactor_plan.md  ftg_gap_steer_refactor_status.md  ftg_implementation_status.md  ftg_profile_implementation_status.md  ftg_steer_to_best_status.md  ftg_strategy.md  ftg_strategy_refactor_status.md  ftg_tests.md  ftg_v1.md  ftg_wall_proximity_stop_status.md  heartbeat_mode_tsd20_safety_fix_status.md  hils_e2e_status.md  imu_safety_implementation_status.md  imu_safety_plan.md  (+48 more)
firmware/: PLATFORMIO_SNIPPET.ini
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
playground/: steer_limit_test.py
rpi/: CMakeLists.txt  LidarReceiver.cpp  LidarReceiver.h  Process.cpp  Process.h  Sender.cpp  Sender.h  lidar_to_esp  lidar_to_esp.cpp  lidar_to_esp.h  main.cpp  makefile  package.xml  uart.c  uart.h
rpi/apps/lidar_received/: CMakeLists.txt  LidarScanData.cpp  LidarScanData.hpp  lidar_recieiver.h  main.cpp
rpi/apps/lidar_received/config/: Config.h
rpi/apps/metricsd/: CMakeLists.txt
rpi/apps/metricsd/config/: Config.h
rpi/apps/metricsd/src/: main.cpp
rpi/apps/ridar_recieiver/: CMakeLists.txt  LidarScanData.cpp  LidarScanData.hpp  main.cpp  ridar_recieiver.h
rpi/apps/serialctl/: CMakeLists.txt  main.cpp
rpi/apps/serialctl/config/: Config.h
rpi/apps/seriald/: CMakeLists.txt  Makefile  seriald_client.py
rpi/apps/seriald/config/: Config.h
rpi/apps/seriald/src/: async_logger.cpp  async_logger.h  main.cpp  sink_file.cpp  sink_file.h  sink_stdout.cpp
rpi/apps/sim_esp32d/: CMakeLists.txt
rpi/apps/sim_esp32d/config/: Config.h
rpi/apps/sim_esp32d/src/: main.cpp
rpi/lib/mc_core/: CMakeLists.txt
rpi/lib/mc_core/include/mc/core/: Endian.hpp  Log.hpp  Path.hpp  Process.hpp  Result.hpp  Signal.hpp  Time.hpp
rpi/lib/mc_core/include/mc_core/: Endian.h  Log.h  Process.h  Result.h  Time.h
rpi/lib/mc_core/src/: Log.cpp  Process.cpp  Time.cpp
rpi/lib/mc_ipc/: CMakeLists.txt
rpi/lib/mc_ipc/include/mc/: ipc_dgram.h
rpi/lib/mc_ipc/include/mc/ipc/: UdsSeqPacket.hpp
rpi/lib/mc_ipc/src/: UdsSeqPacket.cpp  ipc_dgram.cpp
rpi/lib/mc_proto/: CMakeLists.txt
rpi/lib/mc_proto/include/mc/: mcproto.h  mcproto_payloads.h
rpi/lib/mc_proto/include/mc/proto/: Payloads.hpp  Proto.hpp
rpi/lib/mc_proto/src/: mcproto.cpp
rpi/lib/mc_serial/: CMakeLists.txt
rpi/lib/mc_serial/include/mc/serial/: Uart.hpp
rpi/lib/mc_serial/include/mc_serial/: UartPosix.h
rpi/lib/mc_serial/src/: Uart.cpp  UartPosix.cpp
rpi/reset/: Esp32Reset.cpp  Esp32Reset.h  __init__.py
rpi/ros2_ws/src/lidar_bridge/: package.xml  setup.cfg  setup.py
rpi/ros2_ws/src/lidar_bridge/lidar_bridge/: bridge_node.py
rpi/ros2_ws/src/mc_bridge/: package.xml  setup.cfg  setup.py
rpi/ros2_ws/src/mc_bridge/mc_bridge/: bridge_node.py  mc_proto_codec.py
rpi/ros2_ws/src/mc_demo_pub/: package.xml  setup.py
rpi/ros2_ws/src/mc_demo_pub/mc_demo_pub/: demo_pub_node.py
rpi/ros2_ws/src/mc_msgs/: package.xml
rpi/ros2_ws/src/mc_tf_static/: package.xml  setup.cfg  setup.py
rpi/ros2_ws/src/mc_tf_static/mc_tf_static/: static_tf_node.py
rpi/ros2_ws/src/race_manager/: package.xml  setup.cfg  setup.py
rpi/ros2_ws/src/race_manager/config/: frames.yaml
rpi/ros2_ws/src/race_manager/launch/: mapping.launch.py
rpi/ros2_ws/src/race_manager/race_manager/: lap_manager.py
rpi/seriald/: Makefile
rpi/seriald/include/: mcproto.h
rpi/seriald/src/: ipc.cpp  ipc.h  main.cpp  proto.cpp  sink_stdout.h  uart_posix.cpp  uart_posix.h
rpi/src/: CMakeLists.txt  LidarReceiver.cpp  LidarReceiver.h  MotionState.h  Process.cpp  Process.h  Sender.cpp  Sender.h  ShmLidarReceiver.cpp  ShmLidarReceiver.h  Telemetry.cpp  Telemetry.h  Tsd20State.h  lidar_to_esp.cpp  lidar_to_esp.h  main.cpp  uart.c  uart.h
rpi/src/app/: lidar_to_esp.cpp  lidar_to_esp.h  main.cpp
rpi/src/comm/: Sender.cpp  Sender.h
rpi/src/config/: Config.h  Params.h  Profile.h
rpi/src/control/: SpeedPolicy.cpp  SpeedPolicy.h  SteeringSmoother.cpp  SteeringSmoother.h
rpi/src/perception/: LidarReceiver.cpp  LidarReceiver.h  LidarTypes.h  ScanPreprocessor.cpp  ScanPreprocessor.h
rpi/src/planning/: IPlanner.h  PlannerBaseline.cpp  PlannerBaseline.h  PlannerFTG.cpp  PlannerFTG.h  planning_types.h
rpi/src/proto/: Codec.h  PacketReader.cpp  PacketReader.h  PacketWriter.cpp  PacketWriter.h  Protocol.h  Trace.cpp  Trace.h
rpi/tests/: CMakeLists.txt  test_golden_scans.cpp  test_pipeline_integration.cpp  test_planner_ftg_stop.cpp  test_speed_policy.cpp
rpi/tests/fixtures/scans/: chicane.txt  corridor.txt  left_turn.txt  open_space.txt
tools/: clean_comment.py  fillEmptyDir.sh  find_make_srcs.py  rawCodeViewer.sh  rpi_reset_esp32.py  setupd.sh
(+196 files in other folders)
