[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robo-racer"
version = "0.1.0"
description = "Robo Racer project"
requires-python = ">=3.13"
dependencies = [
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
