<?xml version="1.0"?>
<package format="3">
  <name>mc_demo_pub</name>
  <version>0.1.0</version>
  <description>Demo LaserScan publisher for RViz</description>
  <maintainer email="tetsuro997@gmail.com">Robo Racer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
