<?xml version="1.0"?>
<package format="3">
  <name>mc_tf_static</name>
  <version>0.1.0</version>
  <description>Static TF publisher for base_link to laser</description>
  <maintainer email="dev@example.com">Robo Racer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
